fixed nav spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,27 +7,27 @@ body {
 
 #mainheader {
     background-color: rgb(22, 138, 22);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
 }
 
 nav {
     height: 60px;
-    width: 1000px;
+    width: 100%;
+    padding: 12px;
     /*margin: 0 auto 20px;*/
+    align-items: center;
     font-size: 19px;
-    text-align: center;
+    overflow: auto;
 
-}
-
-#leftmentu {
-    float: left;
-    width: 30%;
-    margin-bottom: 20px;
 }
 
 .searchbox {
-    padding: 5px;
-    margin: 10 px 10px;
-    width: 200px;
+    padding: 10px;
+    margin: 20 px 10px;
+    width: 50%;
+
 }
 
 h1 {
@@ -38,11 +38,11 @@ h2 {
     text-align: center;
 }
 
-#main {
-    float: right;
-    width: 70%;
-    margin-bottom: 20px;
+.main {display: flex;
+       flex-direction: row;
+
 }
+
 
 article {
     font-family: 'Roboto' ;
@@ -51,7 +51,7 @@ article {
 footer {
     background-color: rgb(22, 138, 22);
     background-size: 100%;
-    clear: both;
-    margin: 0 auto 20px;
+    display: flex;
+
 
 }
